# Deep-Learning-Challengers-Series

./: README.md  pyproject.toml
01. Campusx/: RNN.docx
01. Campusx/1.MLP-Notation/: MLP Intution.md  Notation.md  move.sh  rename.sh
01. Campusx/2.Customer Churn Prediction/: main.ipynb
01. Campusx/2.Foward-Propagation/: forward-propagation.md
01. Campusx/3.Customer Churn Prediction/: app.py  customer_churn_model.h5  main.ipynb  notebook8ad570467f.ipynb  scaler.save
01. Campusx/Optimization/: gradient.ipynb
03. NPTEL/: test.py
03. NPTEL/Week01/: Boundry.py  NOTES.md  Week01 Assignment.docx  test.py  ~$ek01 Assignment.docx  ~WRL0768.tmp
03. NPTEL/Week02/: Gradient_visualize.py  NOTES.md  Week 02 Assignment.docx  gradient.py
03. NPTEL/Week03/: Week 03 Assignment.docx
03. NPTEL/Week04/: Week 04 Assignment.docx  contuors.ipynb  test.md  ~$ek 04 Assignment.docx
03. NPTEL/Week05/: Notes.md  PCA.ipynb  eigen_decomposition.ipynb
03. NPTEL/Week06/: Week06 Assignment.docx
03. NPTEL/Week07/: Week 07 Assignment.docx
03. NPTEL/Week08/: NOTES.md  Week 08 Assignments.docx  ~$ek 08 Assignments.docx
03. NPTEL/Week09/: NOTES.md  Skip Gram Model.html  Skip Gram Model.md  Week09 Assignment.docx  ~$ek09 Assignment.docx
03. NPTEL/Week10/: CNN backpropagation.md  ConvolutionNN.md  NOTES.md
03. NPTEL/Week11/: NOTES.md  RNN&LSTM.md  Week 11 Assignment.docx
03. NPTEL/Week12/: NOTES.md  Week 12 Assignment.docx  ~$ek 12 Assignment.docx
Computer Vision/: 01-numpy basics.ipynb  1.py  11.py  README.md  test.py  test.sh
Libraries Fandamentals/: Scipy.md  scipy.py
(+74 files in other folders)
